--- a/src/scss/sections/_section-1.scss
+++ b/src/scss/sections/_section-1.scss
@@ -1,8 +1,8 @@
 .hero {
   &__title {
     font-size: 44px;
+    line-height: 48px;
     margin-bottom: 28px;
-    text-align: center;
   }
 
   .hero__img {
