--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,4 @@
 @import "./variables";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 @import "./vendors/normalize/normalize.css";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
@@ -15,6 +14,11 @@ body {
 .section {
   margin-top: 81px;
   
+  &__title {
+    text-align: center;
+    font-weight: 500;
+  }
+
   &:first-child {
     margin-top: 84px;
   }
