--- a/src/scss/sections/_section-1.scss
+++ b/src/scss/sections/_section-1.scss
@@ -7,5 +7,10 @@
 
   .hero__img {
     border-radius: 30px;
+
+    display: block;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
 }
